# docpipe

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
classifier/vocab/: items.json
diagrams/: architecture.tex
infra/: app.py  cdk.json
infra/stacks/: inkvault_stack.py
migrations/: env.py
migrations/versions/: 001_initial.py  002_drop_documents_table.py
scripts/: generate_example.py  generate_training_data.py  train_classifier.py
scripts/providers/: contract.py  invoice.py  other.py  receipt.py  style.py
scripts/templates/: contract.html  invoice.html  other_bank.html  other_delivery.html  other_hr.html  other_letter.html  other_meeting.html  other_utility.html  receipt.html
src/: config.py  main.py
src/api/: deps.py  routes.py
src/db/: dynamo.py  session.py
src/models/: database.py  domain.py  schemas.py
src/pipeline/: processor.py
src/services/: classifier.py  extractor.py  s3.py  storage.py  validator.py
tests/: conftest.py  test_data_quality.py  test_extractor.py  test_pdf_pipeline.py  test_plots.py  test_processor.py  test_providers.py  test_storage.py  test_validator.py
